CSS sulle tableView, aggiunte grafiche

--- a/src/main/resources/com/calendly/calendly/css/dark.css
+++ b/src/main/resources/com/calendly/calendly/css/dark.css
@@ -3,7 +3,7 @@
     systemGray5: #2c2c2e;
     systemGray4: #3a3a3c;
     systemGray3: #48484a;
-    systemGray2: #48484a;
+    systemGray2: #636366;
     systemGray:  #8e8e93;
 
     systemBlue:  #0a84ff;
