--- a/src/main/resources/com/calendly/calendly/fxml/DipendentiView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/DipendentiView.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane fx:id="ancorPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.DipendentiViewController">
    <children>
-      <TableView fx:id="tableView" layoutX="19.0" layoutY="55.0" onSort="#onSortTableView" prefHeight="296.0" prefWidth="563.0" styleClass="table-view" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="60.0">
+      <TableView fx:id="tableView" layoutX="15.0" layoutY="105.0" onSort="#onSortTableView" prefHeight="306.0" prefWidth="563.0" styleClass="table-view" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="105.0">
         <columns>
           <TableColumn fx:id="usernameCol" prefWidth="75.0" text="Username" />
           <TableColumn fx:id="nameCol" prefWidth="75.0" text="Nome" />
@@ -22,15 +22,15 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <Button styleClass="secondaryButton" fx:id="addButton" defaultButton="true" layoutX="525.0" layoutY="361.0" mnemonicParsing="false" onAction="#actionAddButton" text="Aggiungi" AnchorPane.bottomAnchor="8.0" AnchorPane.rightAnchor="15.0" />
-      <Button styleClass="secondaryButton" fx:id="removeButton" cancelButton="true" layoutX="379.0" layoutY="372.0" mnemonicParsing="false" onAction="#actionRemoveButton" text="Rimuovi" AnchorPane.bottomAnchor="8.0" AnchorPane.rightAnchor="153.0" />
-      <Button styleClass="secondaryButton" fx:id="editButton" layoutX="444.0" layoutY="372.0" mnemonicParsing="false" onAction="#actionEditButton" text="Modifica" AnchorPane.bottomAnchor="8.0" AnchorPane.rightAnchor="84.5" />
+      <Button fx:id="addButton" defaultButton="true" layoutX="147.0" layoutY="60.0" mnemonicParsing="false" onAction="#actionAddButton" styleClass="secondaryButton" text="Aggiungi" AnchorPane.leftAnchor="147.0" AnchorPane.topAnchor="60.0" />
+      <Button fx:id="removeButton" cancelButton="true" layoutX="14.0" layoutY="60.0" mnemonicParsing="false" onAction="#actionRemoveButton" styleClass="secondaryButton" text="Rimuovi" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="60.0" />
+      <Button fx:id="editButton" layoutX="79.0" layoutY="60.0" mnemonicParsing="false" onAction="#actionEditButton" styleClass="secondaryButton" text="Modifica" AnchorPane.leftAnchor="79.0" AnchorPane.topAnchor="60.0" />
       <Label fx:id="titleLabel" layoutX="19.0" layoutY="8.0" prefHeight="43.0" prefWidth="171.0" text="Dipendenti" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="8.0">
          <font>
             <Font size="28.0" />
          </font>
       </Label>
-      <Button styleClass="secondaryButton" fx:id="searchButton" layoutX="532.0" layoutY="14.0" mnemonicParsing="false" onAction="#actionSearchButton" text="Cerca" AnchorPane.rightAnchor="15.0" />
-      <TextField styleClass="searchField" layoutX="364.0" layoutY="14.0" AnchorPane.rightAnchor="69.5" AnchorPane.topAnchor="14.0" />
+      <Button fx:id="searchButton" layoutX="532.0" layoutY="14.0" mnemonicParsing="false" onAction="#actionSearchButton" styleClass="secondaryButton" text="Cerca" AnchorPane.rightAnchor="15.0" />
+      <TextField layoutX="364.0" layoutY="14.0" styleClass="searchField" AnchorPane.rightAnchor="69.5" AnchorPane.topAnchor="14.0" />
    </children>
 </AnchorPane>
