--- a/src/main/resources/com/calendly/calendly/fxml/LoginView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/LoginView.fxml
@@ -21,9 +21,9 @@
             </TextField>
             <PasswordField fx:id="passwordField" layoutX="105.0" layoutY="261.0" promptText="password" styleClass="loginField" />
             <Button fx:id="accediButton" alignment="CENTER" contentDisplay="CENTER" disable="true" layoutX="149.0" layoutY="567.0" mnemonicParsing="false" onAction="#accedi" prefHeight="26.0" prefWidth="78.0" styleClass="primaryButton" text="Accedi" textAlignment="CENTER" />
-            <Label fx:id="usernameLabel" layoutX="105.0" layoutY="181.0" text="Username" />
-            <Label fx:id="passwordLabel" layoutX="106.0" layoutY="242.0" text="Password" />
-            <Label fx:id="loginLabel" alignment="CENTER" layoutX="104.0" layoutY="54.0" prefHeight="45.0" prefWidth="159.0" text="Login">
+            <Label fx:id="usernameLabel" contentDisplay="CENTER" layoutX="105.0" layoutY="181.0" text="Username" />
+            <Label fx:id="passwordLabel" contentDisplay="CENTER" layoutX="106.0" layoutY="242.0" text="Password" />
+            <Label fx:id="loginLabel" contentDisplay="CENTER" alignment="CENTER" layoutX="104.0" layoutY="54.0" prefHeight="45.0" prefWidth="159.0" text="Login">
                <font>
                   <Font size="48.0" />
                </font>
