--- a/src/main/resources/com/calendly/calendly/fxml/AppuntamentiView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/AppuntamentiView.fxml
@@ -9,18 +9,17 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane cacheShape="false" centerShape="false" focusTraversable="true" prefHeight="621.0" prefWidth="660.0" scaleShape="false" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.AppuntamentiController">
    <children>
-      <Button layoutX="365.0" layoutY="67.0" styleClass="secondaryButton" defaultButton="true" mnemonicParsing="false" onAction="#aggiungiAppuntamento" text="Aggiungi" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="67.0" />
-      <Button layoutX="577.0" layoutY="67.0" styleClass="secondaryButton" defaultButton="true" mnemonicParsing="false" onAction="#rimuoviAppuntamento" text="Rimuovi" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="67.0" />
+      <Button defaultButton="true" layoutX="365.0" layoutY="67.0" mnemonicParsing="false" onAction="#aggiungiAppuntamento" styleClass="secondaryButton" text="Aggiungi" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="67.0" />
+      <Button defaultButton="true" layoutX="577.0" layoutY="67.0" mnemonicParsing="false" onAction="#rimuoviAppuntamento" styleClass="secondaryButton" text="Rimuovi" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="67.0" />
       <Button layoutX="477.0" layoutY="67.0" mnemonicParsing="false" onAction="#modificaAppuntamento" styleClass="secondaryButton" text="Modifica" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="67.0" />
       <Label layoutX="14.0" layoutY="10.0" prefHeight="34.0" prefWidth="209.0" text="Appuntamenti" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="10.0">
          <font>
             <Font size="27.0" />
          </font>
       </Label>
-      <TableView fx:id="table" layoutX="10.0" layoutY="113.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="566.0" prefWidth="641.0" styleClass="container-level-2" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="113.0">
+      <TableView fx:id="table" layoutX="10.0" layoutY="113.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="566.0" prefWidth="641.0" styleClass="container-level-2" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="113.0">
          <columns>
             <TableColumn fx:id="colonnaId" prefWidth="42.5" text="Id" />
             <TableColumn fx:id="colonnaEmail" prefWidth="112.0" text="Email" />
@@ -35,8 +34,8 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <ComboBox fx:id="filtroBox" styleClass="secondaryButton" layoutX="20.0" layoutY="67.0" prefHeight="24.0" prefWidth="86.0" promptText="Filtro" AnchorPane.leftAnchor="20.0" />
-      <TextField fx:id="cercaField" styleClass="searchField" layoutX="125.0" layoutY="67.0" prefHeight="24.0" prefWidth="127.0" AnchorPane.leftAnchor="115.0" />
-      <Button layoutX="250.0" layoutY="67.0" styleClass="secondaryButton" mnemonicParsing="false" onAction="#cerca" text="Cerca" AnchorPane.leftAnchor="250.0" />
+      <ComboBox fx:id="filtroBox" layoutX="20.0" layoutY="67.0" prefHeight="24.0" prefWidth="86.0" promptText="Filtro" styleClass="secondaryButton" AnchorPane.leftAnchor="20.0" />
+      <TextField fx:id="cercaField" layoutX="125.0" layoutY="67.0" prefHeight="24.0" prefWidth="127.0" styleClass="searchField" AnchorPane.leftAnchor="115.0" />
+      <Button layoutX="250.0" layoutY="67.0" mnemonicParsing="false" onAction="#cerca" styleClass="secondaryButton" text="Cerca" AnchorPane.leftAnchor="250.0" />
    </children>
 </AnchorPane>
