--- a/src/main/resources/com/calendly/calendly/css/style.css
+++ b/src/main/resources/com/calendly/calendly/css/style.css
@@ -156,7 +156,7 @@
 }
 
 
-.table-view .virtual-flow .scroll-bar:vertical .thumb{
+.table-view .virtual-flow .scroll-bar:vertical .thumb {
     -fx-background-color:  linear-gradient(to bottom, fifthBackgroundColor, fourthBackgroundColor);
 }
 .table-view .virtual-flow .scroll-bar:horizontal .thumb {
@@ -177,6 +177,25 @@
 .table-row-cell:highlighted {
     -fx-background-color: systemRed;
     -fx-background-radius: 15px;
+}
+
+
+.table-cell .text-field {
+    -fx-background-color: thirdBackgroundColor;
+    -fx-background-radius: 8px;
+}
+
+.table-view .show-hide-columns-button {
+    -fx-background-color: sixthBackgroundColor;
+    -fx-margin: 0px 0px 0px 10px;
+}
+
+.table-view .show-hide-columns-button .context-menu .show-hide-column-image {
+    -fx-background-color: white;
+}
+
+.table-view .show-hide-columns-button .context-menu {
+    -fx-background-color: sixthBackgroundColor;
 }
 
 
