--- a/src/main/resources/com/calendly/calendly/fxml/AppuntamentiView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/AppuntamentiView.fxml
@@ -11,9 +11,9 @@
 
 <AnchorPane cacheShape="false" centerShape="false" focusTraversable="true" prefHeight="621.0" prefWidth="660.0" scaleShape="false" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.AppuntamentiController">
    <children>
-      <Button defaultButton="true" layoutX="365.0" layoutY="67.0" mnemonicParsing="false" onAction="#aggiungiAppuntamento" styleClass="secondaryButton" text="Aggiungi" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="67.0" />
-      <Button defaultButton="true" layoutX="577.0" layoutY="67.0" mnemonicParsing="false" onAction="#rimuoviAppuntamento" styleClass="secondaryButton" text="Rimuovi" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="67.0" />
-      <Button layoutX="477.0" layoutY="67.0" mnemonicParsing="false" onAction="#modificaAppuntamento" styleClass="secondaryButton" text="Modifica" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="67.0" />
+      <Button fx:id="addButton" defaultButton="true" layoutX="578.0" layoutY="67.0" mnemonicParsing="false" onAction="#aggiungiAppuntamento" styleClass="secondaryButton" text="Aggiungi" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="67.0" />
+      <Button fx:id="removeButton" defaultButton="true" layoutX="426.0" layoutY="67.0" mnemonicParsing="false" onAction="#rimuoviAppuntamento" styleClass="secondaryButton" text="Rimuovi" AnchorPane.rightAnchor="171.0" AnchorPane.topAnchor="67.0" />
+      <Button fx:id="editButton" layoutX="500.0" layoutY="67.0" mnemonicParsing="false" onAction="#modificaAppuntamento" styleClass="secondaryButton" text="Modifica" AnchorPane.rightAnchor="93.0" AnchorPane.topAnchor="67.0" />
       <Label layoutX="14.0" layoutY="10.0" prefHeight="34.0" prefWidth="209.0" text="Appuntamenti" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="10.0">
          <font>
             <Font size="27.0" />
