--- a/src/main/resources/com/calendly/calendly/fxml/DipendentiView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/DipendentiView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -30,7 +31,8 @@
             <Font size="28.0" />
          </font>
       </Label>
-      <Button fx:id="searchButton" layoutX="532.0" layoutY="14.0" mnemonicParsing="false" onAction="#actionSearchButton" styleClass="secondaryButton" text="Cerca" AnchorPane.rightAnchor="15.0" />
-      <TextField layoutX="364.0" layoutY="14.0" styleClass="searchField" AnchorPane.rightAnchor="69.5" AnchorPane.topAnchor="14.0" />
+      <Button fx:id="searchButton" layoutX="532.0" layoutY="14.0" mnemonicParsing="false" onAction="#actionSearchButton" styleClass="secondaryButton" text="Cerca" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0" />
+      <TextField layoutX="364.0" layoutY="14.0" styleClass="searchField" AnchorPane.rightAnchor="69.5" AnchorPane.topAnchor="15.0" />
+      <ComboBox fx:id="filtroBox" layoutX="274.0" layoutY="14.0" onAction="#actionFiltroBox" prefHeight="24.0" prefWidth="86.0" promptText="Filtra" styleClass="secondaryButton" AnchorPane.rightAnchor="233.0" AnchorPane.topAnchor="15.0" />
    </children>
 </AnchorPane>
