--- a/src/main/resources/com/calendly/calendly/fxml/ImpostazioniView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/ImpostazioniView.fxml
@@ -4,24 +4,37 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.ImpostazioniController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.ImpostazioniController">
    <children>
       <AnchorPane layoutX="150.0" layoutY="5.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="645.0" prefWidth="368.0" AnchorPane.leftAnchor="150.0" AnchorPane.rightAnchor="150.0">
          <children>
-            <Label layoutX="15.0" layoutY="15.0" prefHeight="26.0" prefWidth="166.0" text="Cambia il tema dell'app" />
-            <ComboBox fx:id="temiComboBox" layoutX="208.0" layoutY="16.0" onAction="#scegliTema" prefHeight="24.0" prefWidth="132.0" promptText="Scegli Tema" styleClass="primaryButton" />
-            <Label layoutX="15.0" layoutY="162.0" prefHeight="26.0" prefWidth="166.0" text="Cambia la tua password" AnchorPane.leftAnchor="15.0" />
-            <Button layoutX="278.0" layoutY="198.0" mnemonicParsing="false" onAction="#cambiaPassword" styleClass="primaryButton" text="Cambia" AnchorPane.rightAnchor="14.0" />
+            <ComboBox fx:id="temiComboBox" layoutX="214.0" layoutY="55.0" onAction="#scegliTema" prefHeight="24.0" prefWidth="132.0" promptText="Scegli Tema" styleClass="primaryButton" AnchorPane.rightAnchor="14.0" />
             <Button layoutX="130.0" layoutY="619.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#esci" prefHeight="25.0" prefWidth="100.0" styleClass="primaryButton" text="Logout" AnchorPane.bottomAnchor="2.0" />
-            <Label layoutX="14.0" layoutY="53.0" prefHeight="26.0" prefWidth="166.0" text="Font dislessia" AnchorPane.leftAnchor="15.0" />
-            <CheckBox layoutX="257.0" layoutY="57.0" mnemonicParsing="false" onAction="#attivaDislessia" AnchorPane.rightAnchor="20.0" />
-            <PasswordField fx:id="password" layoutX="15.0" layoutY="198.0" prefHeight="24.0" prefWidth="166.0" />
-            <Label layoutX="15.0" layoutY="92.0" prefHeight="26.0" prefWidth="166.0" text="Cambia il tuo username" />
-            <Button layoutX="278.0" layoutY="128.0" mnemonicParsing="false" onAction="#cambiaUsername" styleClass="primaryButton" text="Cambia" />
-            <PasswordField fx:id="username" layoutX="15.0" layoutY="128.0" prefHeight="24.0" prefWidth="166.0" />
+            <CheckBox layoutX="322.0" layoutY="163.0" mnemonicParsing="false" onAction="#attivaDislessia" AnchorPane.rightAnchor="20.0" />
+            <Slider fx:id="slideBar" layoutX="220.0" layoutY="257.0" showTickLabels="true" showTickMarks="true" AnchorPane.rightAnchor="0.0" />
+            <Label layoutX="12.0" layoutY="220.0" text="Grandezza del testo">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Text layoutX="14.0" layoutY="270.0" strokeType="OUTSIDE" strokeWidth="0.0" text="La slide bar di fianco, permette di impsotare la grandezza del testo." wrappingWidth="171.0" />
+            <Label layoutX="11.0" layoutY="101.0" prefHeight="21.0" prefWidth="221.0" text="Carattere per la dislessia">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Text layoutX="14.0" layoutY="153.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Carattere adatto per le persone con dislessia. Basta attivare la spunta di fianco." wrappingWidth="171.0" />
+            <Label layoutX="11.0" layoutY="18.0" prefHeight="21.0" prefWidth="191.0" text="Scegli il tema dell'app">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Text layoutX="12.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ti permette di scegliere tra i temi dell'app." wrappingWidth="171.0" />
          </children>
       </AnchorPane>
    </children>
