Aggiunto CSS al Dialog

--- a/src/main/resources/com/calendly/calendly/css/style.css
+++ b/src/main/resources/com/calendly/calendly/css/style.css
@@ -8,8 +8,30 @@
     -fx-background-radius: 0px;
 }
 
+.external-pane:header *.header-panel{
+    -fx-background-color: secondaryBackgroundColor;
+    -fx-background-radius: 0px 0px 8px 8px;
+}
+
 .container-level-2 {
     -fx-background-color: secondaryBackgroundColor;
+}
+
+.dialog-pane .button-bar .button:default {
+    -fx-background-color: primaryBackgroundButtonColor;
+    -fx-background-radius: 30px;
+}
+
+.dialog-pane .button-bar .button:default:hover {
+    -fx-background-color: blueLight;
+}
+
+.dialog-pane .button-bar .button:cancel {
+    -fx-background-color: thirdBackgroundColor;
+}
+
+.dialog-pane .button-bar .button:cancel:hover {
+        -fx-background-color: fourthBackgroundColor;
 }
 
 .primaryButton {
@@ -17,11 +39,12 @@
     -fx-background-radius: 30px;
 }
 
-.primaryButton:hover{
+.primaryButton:hover {
     -fx-background-color: blueLight;
 }
 
-.loginField {
+.loginField,
+.generalField {
     -fx-background-color: thirdBackgroundColor;
 }
 
@@ -210,6 +233,9 @@
     -fx-background-color: fourthBackgroundColor;
 }
 
+.combo-box {
+    -fx-background-color: thirdBackgroundColor;
+}
 
 .combo-box-popup .list-view {
     -fx-control-inner-background: thirdBackgroundColor;
