--- a/src/main/resources/com/calendly/calendly/fxml/ImpostazioniView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/ImpostazioniView.fxml
@@ -9,16 +9,12 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.ImpostazioniController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.ImpostazioniController">
    <children>
       <AnchorPane layoutX="18.0" layoutY="5.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="645.0" prefWidth="630.0" AnchorPane.leftAnchor="18.0" AnchorPane.rightAnchor="12.0">
          <children>
             <ComboBox fx:id="temiComboBox" layoutX="492.0" layoutY="111.0" onAction="#scegliTema" prefHeight="24.0" prefWidth="132.0" promptText="Scegli Tema" styleClass="primaryButton" AnchorPane.rightAnchor="6.0" />
-            <AnchorPane layoutX="281.0" layoutY="606.0" prefHeight="25.0" prefWidth="351.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-               <children>
-                  <Button layoutX="265.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#esci" prefHeight="25.0" prefWidth="25.0" styleClass="primaryButton" text="Logout" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="265.0" AnchorPane.rightAnchor="265.0" AnchorPane.topAnchor="0.0" />
-               </children>
-            </AnchorPane>
+            <AnchorPane layoutX="281.0" layoutY="606.0" prefHeight="25.0" prefWidth="351.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
             <CheckBox fx:id="checkDislessia" layoutX="593.0" layoutY="191.0" mnemonicParsing="false" onAction="#attivaDislessia" AnchorPane.rightAnchor="19.0" />
             <Slider fx:id="slideBar" layoutX="490.0" layoutY="299.0" max="40.0" min="10.0" showTickLabels="true" showTickMarks="true" value="10.0" AnchorPane.rightAnchor="0.0" />
             <Label fx:id="labelSize" layoutX="11.0" layoutY="241.0" text="Grandezza del testo" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="-530.0">
@@ -49,15 +45,11 @@
                   <Font size="14.0" />
                </font></Text>
             <Button layoutX="559.0" layoutY="333.0" mnemonicParsing="false" onAction="#cambiaGrandezza" styleClass="primaryButton" text="Cambia" AnchorPane.rightAnchor="3.0" />
-            <AnchorPane layoutX="163.0" layoutY="14.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-               <children>
-                  <Label fx:id="labelImpostazioni" layoutX="192.0" prefHeight="35.0" prefWidth="331.0" text="Impostazioni" AnchorPane.rightAnchor="107.0">
-                     <font>
-                        <Font size="28.0" />
-                     </font>
-                  </Label>
-               </children>
-            </AnchorPane>
+            <Label fx:id="labelImpostazioni" layoutX="11.0" layoutY="14.0" prefHeight="35.0" prefWidth="438.0" text="Impostazioni" AnchorPane.leftAnchor="11.0">
+               <font>
+                  <Font size="28.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
