--- a/src/main/resources/com/calendly/calendly/fxml/StatisticheView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/StatisticheView.fxml
@@ -3,13 +3,20 @@
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.StatisticheController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.StatisticheController">
    <children>
-      <VBox alignment="TOP_CENTER" layoutX="267.0" layoutY="182.0" prefHeight="825.0" prefWidth="660.0" AnchorPane.bottomAnchor="-165.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox layoutX="267.0" layoutY="182.0" prefHeight="825.0" prefWidth="660.0" AnchorPane.bottomAnchor="-165.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
+            <Label fx:id="labelStatistiche" prefHeight="35.0" prefWidth="642.0" text="Statistiche">
+               <font>
+                  <Font size="28.0" />
+               </font>
+            </Label>
             <BarChart fx:id="chartSettimanale" prefHeight="280.0" prefWidth="660.0" title="Settimanale">
                <xAxis>
                   <CategoryAxis label="Giorni" side="BOTTOM" />
