--- a/src/main/resources/com/calendly/calendly/fxml/AppuntamentiView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/AppuntamentiView.fxml
@@ -7,14 +7,19 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane cacheShape="false" centerShape="false" focusTraversable="true" prefHeight="621.0" prefWidth="660.0" scaleShape="false" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.AppuntamentiController">
+<AnchorPane cacheShape="false" centerShape="false" focusTraversable="true" prefHeight="621.0" prefWidth="660.0" scaleShape="false" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.AppuntamentiController">
    <children>
-      <Button fx:id="addButton" defaultButton="true" layoutX="570.0" layoutY="20.0" mnemonicParsing="false" onAction="#aggiungiAppuntamento" styleClass="secondaryButton" text="Aggiungi" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="20.0" />
-      <Button fx:id="removeButton" defaultButton="true" layoutX="419.0" layoutY="20.0" mnemonicParsing="false" onAction="#rimuoviAppuntamento" styleClass="secondaryButton" text="Rimuovi" AnchorPane.rightAnchor="170.0" AnchorPane.topAnchor="20.0" />
-      <Button fx:id="editButton" layoutX="495.0" layoutY="20.0" mnemonicParsing="false" onAction="#modificaAppuntamento" styleClass="secondaryButton" text="Modifica" AnchorPane.rightAnchor="92.0" AnchorPane.topAnchor="20.0" />
-      <Label fx:id="labelAppuntamenti" layoutX="14.0" layoutY="10.0" prefHeight="34.0" prefWidth="632.0" text="Appuntamenti" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="10.0">
+      <HBox layoutX="388.0" layoutY="20.0" AnchorPane.rightAnchor="20.0">
+         <children>
+            <Button fx:id="removeButton" defaultButton="true" mnemonicParsing="false" onAction="#rimuoviAppuntamento" styleClass="secondaryButton" text="Rimuovi" />
+            <Button fx:id="editButton" mnemonicParsing="false" onAction="#modificaAppuntamento" styleClass="secondaryButton" text="Modifica" />
+            <Button fx:id="addButton" defaultButton="true" mnemonicParsing="false" onAction="#aggiungiAppuntamento" styleClass="secondaryButton" text="Aggiungi" />
+         </children>
+      </HBox>
+      <Label fx:id="labelAppuntamenti" layoutX="14.0" layoutY="10.0" prefHeight="34.0" prefWidth="364.0" text="Appuntamenti" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="10.0">
          <font>
             <Font size="27.0" />
          </font>
@@ -34,10 +39,18 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <ComboBox fx:id="filtroBox" layoutX="20.0" layoutY="67.0" prefHeight="24.0" prefWidth="86.0" promptText="Filtro" styleClass="secondaryButton" AnchorPane.leftAnchor="20.0" />
-      <TextField fx:id="cercaField" layoutX="125.0" layoutY="67.0" prefHeight="24.0" prefWidth="127.0" styleClass="searchField" AnchorPane.leftAnchor="115.0" />
-      <Button layoutX="250.0" layoutY="67.0" mnemonicParsing="false" onAction="#cerca" styleClass="secondaryButton" text="Cerca" AnchorPane.leftAnchor="250.0" />
-      <TextField fx:id="idScontrino" layoutX="439.0" layoutY="67.0" prefHeight="24.0" prefWidth="86.0" styleClass="searchField" AnchorPane.rightAnchor="158.0" />
-      <Button layoutX="515.0" layoutY="67.0" mnemonicParsing="false" onAction="#generaScontrino" styleClass="secondaryButton" text="Genera scontrino" AnchorPane.rightAnchor="14.0" />
+      <HBox layoutX="20.0" layoutY="67.0" AnchorPane.leftAnchor="20.0">
+         <children>
+            <ComboBox fx:id="filtroBox" prefHeight="24.0" prefWidth="86.0" promptText="Filtro" styleClass="secondaryButton" />
+            <TextField fx:id="cercaField" prefHeight="24.0" prefWidth="127.0" styleClass="searchField" />
+            <Button fx:id="cercaButton" mnemonicParsing="false" onAction="#cerca" styleClass="secondaryButton" text="Cerca" />
+         </children>
+      </HBox>
+      <HBox layoutX="419.0" layoutY="67.0" AnchorPane.rightAnchor="20.0">
+         <children>
+            <TextField fx:id="idScontrino" prefHeight="24.0" prefWidth="86.0" styleClass="searchField" />
+            <Button fx:id="generaButton" mnemonicParsing="false" onAction="#generaScontrino" styleClass="secondaryButton" text="Genera scontrino" />
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
