--- a/src/main/resources/com/calendly/calendly/fxml/ImpostazioniView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/ImpostazioniView.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -13,38 +14,42 @@
    <children>
       <AnchorPane layoutX="18.0" layoutY="5.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="645.0" prefWidth="630.0" AnchorPane.leftAnchor="18.0" AnchorPane.rightAnchor="12.0">
          <children>
-            <ComboBox fx:id="temiComboBox" layoutX="492.0" layoutY="111.0" onAction="#scegliTema" prefHeight="24.0" prefWidth="132.0" promptText="Scegli Tema" styleClass="primaryButton" AnchorPane.rightAnchor="6.0" />
+            <ComboBox fx:id="temiComboBox" layoutX="500.0" layoutY="142.0" onAction="#scegliTema" prefHeight="24.0" prefWidth="132.0" promptText="Scegli Tema" styleClass="primaryButton" AnchorPane.rightAnchor="-2.0" />
             <AnchorPane layoutX="281.0" layoutY="606.0" prefHeight="25.0" prefWidth="351.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-            <CheckBox fx:id="checkDislessia" layoutX="593.0" layoutY="191.0" mnemonicParsing="false" onAction="#attivaDislessia" AnchorPane.rightAnchor="19.0" />
-            <Slider fx:id="slideBar" layoutX="490.0" layoutY="299.0" max="40.0" min="10.0" showTickLabels="true" showTickMarks="true" value="10.0" AnchorPane.rightAnchor="0.0" />
-            <Label fx:id="labelSize" layoutX="11.0" layoutY="241.0" text="Grandezza del testo" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="-530.0">
+            <CheckBox fx:id="checkDislessia" layoutX="593.0" layoutY="262.0" mnemonicParsing="false" onAction="#attivaDislessia" AnchorPane.rightAnchor="19.0" />
+            <HBox layoutX="407.0" layoutY="426.0" AnchorPane.rightAnchor="15.0">
+               <children>
+                  <Slider fx:id="slideBar" max="25.0" min="10.0" showTickLabels="true" showTickMarks="true" value="10.0" />
+                  <Button fx:id="buttonCambia" mnemonicParsing="false" onAction="#cambiaGrandezza" styleClass="primaryButton" text="Cambia" />
+               </children>
+            </HBox>
+            <Label fx:id="labelSize" layoutX="11.0" layoutY="330.0" text="Grandezza del testo" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="-530.0">
                <font>
                   <Font size="28.0" />
                </font>
             </Label>
-            <Text fx:id="txtSize" layoutX="14.0" layoutY="295.0" strokeType="OUTSIDE" strokeWidth="0.0" text="La slide bar di fianco, permette di impsotare la grandezza del testo." wrappingWidth="618.0">
+            <Text fx:id="txtSize" layoutX="6.0" layoutY="401.0" strokeType="OUTSIDE" strokeWidth="0.0" text="La slide bar di fianco, permette di impsotare la grandezza del testo." wrappingWidth="618.0">
                <font>
                   <Font size="14.0" />
                </font></Text>
-            <Label fx:id="labelDislessia" layoutX="11.0" layoutY="143.0" prefHeight="21.0" prefWidth="704.0" text="Carattere per la dislessia" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="-530.0">
+            <Label fx:id="labelDislessia" layoutX="11.0" layoutY="214.0" prefHeight="21.0" prefWidth="704.0" text="Carattere per la dislessia" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="-530.0">
                <font>
                   <Font size="28.0" />
                </font>
             </Label>
-            <Text fx:id="txtDislessia" layoutX="14.0" layoutY="204.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Carattere adatto per le persone con dislessia. Basta attivare la spunta di fianco." wrappingWidth="618.0">
+            <Text fx:id="txtDislessia" layoutX="14.0" layoutY="275.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Carattere adatto per le persone con dislessia. Basta attivare la spunta di fianco." wrappingWidth="618.0">
                <font>
                   <Font size="14.0" />
                </font></Text>
-            <Label fx:id="labelTemi" layoutX="11.0" layoutY="76.0" prefHeight="21.0" prefWidth="879.0" text="Scegli il tema dell'app" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="-530.0">
+            <Label fx:id="labelTemi" layoutX="11.0" layoutY="96.0" prefHeight="21.0" prefWidth="879.0" text="Scegli il tema dell'app" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="-530.0">
                <font>
                   <Font size="28.0" />
                </font>
             </Label>
-            <Text fx:id="txtTemi" layoutX="22.0" layoutY="127.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ti permette di scegliere tra i temi dell'app." wrappingWidth="618.0">
+            <Text fx:id="txtTemi" layoutX="14.0" layoutY="159.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ti permette di scegliere tra i temi dell'app." wrappingWidth="618.0">
                <font>
                   <Font size="14.0" />
                </font></Text>
-            <Button layoutX="559.0" layoutY="333.0" mnemonicParsing="false" onAction="#cambiaGrandezza" styleClass="primaryButton" text="Cambia" AnchorPane.rightAnchor="3.0" />
             <Label fx:id="labelImpostazioni" layoutX="11.0" layoutY="14.0" prefHeight="35.0" prefWidth="438.0" text="Impostazioni" AnchorPane.leftAnchor="11.0">
                <font>
                   <Font size="28.0" />
