--- a/src/main/resources/com/calendly/calendly/fxml/DipendentiView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/DipendentiView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -12,7 +13,7 @@
 
 <AnchorPane fx:id="ancorPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.DipendentiViewController">
    <children>
-      <TableView fx:id="tableView" layoutX="15.0" layoutY="117.0" prefHeight="294.0" prefWidth="563.0" styleClass="table-view" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="117.0">
+      <TableView fx:id="tableView" layoutX="15.0" layoutY="117.0" prefHeight="294.0" prefWidth="563.0" styleClass="table-view" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="117.0">
         <columns>
           <TableColumn fx:id="usernameCol" prefWidth="75.0" text="Username" />
           <TableColumn fx:id="nameCol" prefWidth="75.0" text="Nome" />
@@ -24,7 +25,7 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <HBox layoutX="14.0" layoutY="60.0" spacing="10.0" AnchorPane.leftAnchor="14.0">
+      <HBox layoutX="14.0" layoutY="60.0" spacing="4.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="60.0">
          <children>
             <Button fx:id="removeButton" cancelButton="true" mnemonicParsing="false" onAction="#actionRemoveButton" styleClass="secondaryButton" text="Rimuovi" />
             <Button fx:id="editButton" mnemonicParsing="false" onAction="#actionEditButton" styleClass="secondaryButton" text="Modifica" />
@@ -36,12 +37,15 @@
             <Font size="28.0" />
          </font>
       </Label>
-      <HBox layoutX="265.0" layoutY="18.0" spacing="10.0" AnchorPane.rightAnchor="15.0">
+      <HBox fx:id="search_hbox" alignment="BASELINE_CENTER" layoutX="265.0" layoutY="18.0" spacing="4.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="18.0">
          <children>
-            <ComboBox fx:id="filtroBox" onAction="#actionFiltroBox" prefHeight="24.0" prefWidth="86.0" promptText="Filtra" styleClass="secondaryButton" />
-            <TextField fx:id="cercaField" styleClass="searchField" />
-            <Button fx:id="searchButton" mnemonicParsing="false" onAction="#actionSearchButton" styleClass="secondaryButton" text="Cerca" />
+            <ComboBox fx:id="filtroBox" onAction="#actionFiltroBox" prefHeight="25.0" prefWidth="86.0" promptText="Filtra" styleClass="secondaryButton" />
+            <TextField fx:id="cercaField" prefHeight="25.0" promptText="cerca" styleClass="searchField" />
+            <Button fx:id="searchButton" defaultButton="true" maxHeight="25.0" minHeight="25.0" mnemonicParsing="false" onAction="#actionSearchButton" prefHeight="25.0" styleClass="secondaryButton" text="Cerca" />
          </children>
+         <padding>
+            <Insets left="3.0" right="3.0" />
+         </padding>
       </HBox>
    </children>
 </AnchorPane>
