--- a/src/main/resources/com/calendly/calendly/fxml/DashboardView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/DashboardView.fxml
@@ -3,23 +3,35 @@
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane cacheShape="false" centerShape="false" focusTraversable="true" prefHeight="621.0" prefWidth="660.0" scaleShape="false" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.AppuntamentiController">
+<AnchorPane cacheShape="false" centerShape="false" focusTraversable="true" prefHeight="596.0" prefWidth="660.0" scaleShape="false" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.DashboardController">
    <children>
       <Label fx:id="labelDashboard" layoutX="14.0" layoutY="10.0" prefHeight="34.0" prefWidth="364.0" text="Dashboard" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="10.0">
          <font>
             <Font size="27.0" />
          </font>
       </Label>
-      <HBox layoutX="9.0" layoutY="50.0" prefHeight="297.0" prefWidth="642.0" spacing="10.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="50.0">
+      <GridPane layoutX="10.0" layoutY="50.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="50.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="349.0" minWidth="10.0" prefWidth="348.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="303.0" minWidth="10.0" prefWidth="292.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+         </rowConstraints>
          <children>
-            <TableView fx:id="table" editable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="297.0" prefWidth="319.0" styleClass="container-level-2" tableMenuButtonVisible="true">
+            <TableView fx:id="tableGiornliera" editable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="274.0" prefWidth="347.0" styleClass="container-level-2" tableMenuButtonVisible="true">
                <columns>
                   <TableColumn fx:id="colonnaId" prefWidth="42.5" text="Id" />
                   <TableColumn fx:id="colonnaEmail" prefWidth="112.0" text="Email" />
@@ -34,7 +46,7 @@
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
             </TableView>
-            <BarChart prefHeight="297.0" prefWidth="344.0">
+            <BarChart fx:id="chartGiornaliero" prefHeight="274.0" prefWidth="324.0" title="Giornaliero" GridPane.columnIndex="1">
               <xAxis>
                 <CategoryAxis side="BOTTOM" />
               </xAxis>
@@ -42,22 +54,30 @@
                 <NumberAxis side="LEFT" />
               </yAxis>
             </BarChart>
+            <TableView fx:id="tableClienti" editable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="239.0" prefWidth="347.0" styleClass="container-level-2" tableMenuButtonVisible="true" GridPane.rowIndex="1">
+               <columns>
+                  <TableColumn fx:id="colonnaId1" prefWidth="42.5" text="CF" />
+                  <TableColumn fx:id="colonnaEmail1" prefWidth="112.0" text="Email" />
+                  <TableColumn fx:id="colonnaNomeCognome1" prefWidth="142.5" text="Nome" />
+                  <TableColumn fx:id="colonnaNumero1" minWidth="1.0" prefWidth="34.0" text="Cognome" />
+                  <TableColumn fx:id="colonnaData1" prefWidth="16.0" text="Numero" />
+               </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
+            <VBox spacing="20.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <children>
+                  <Label fx:id="labelClienti" prefHeight="34.0" prefWidth="280.0" text="Clienti">
+                     <font>
+                        <Font size="27.0" />
+                     </font>
+                  </Label>
+                  <Button fx:id="editButton" mnemonicParsing="false" onAction="#modificaCliente" styleClass="secondaryButton" text="Modifica" />
+                  <Button fx:id="addButton" defaultButton="true" mnemonicParsing="false" onAction="#aggiungiCliente" styleClass="secondaryButton" text="Aggiungi" />
+               </children>
+            </VBox>
          </children>
-      </HBox>
-      <TableView fx:id="table1" editable="true" layoutX="11.0" layoutY="366.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="297.0" prefWidth="319.0" styleClass="container-level-2" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="5.0">
-         <columns>
-            <TableColumn fx:id="colonnaId1" prefWidth="42.5" text="Id" />
-            <TableColumn fx:id="colonnaEmail1" prefWidth="112.0" text="Email" />
-            <TableColumn fx:id="colonnaNomeCognome1" prefWidth="142.5" text="Nome e Cognome" />
-            <TableColumn fx:id="colonnaNumero1" minWidth="1.0" prefWidth="34.0" text="Numero" />
-            <TableColumn fx:id="colonnaData1" prefWidth="39.0" text="Data" />
-            <TableColumn fx:id="colonnaDipendente1" prefWidth="104.0" text="Dipendente" />
-            <TableColumn fx:id="colonnaServizio1" prefWidth="94.0" text="Servizio" />
-            <TableColumn fx:id="colonnaPrezzo1" prefWidth="94.0" text="Prezzo" />
-         </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
+      </GridPane>
    </children>
 </AnchorPane>
