--- a/src/main/resources/com/calendly/calendly/fxml/DipendentiView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/DipendentiView.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -39,13 +38,10 @@
       </Label>
       <HBox fx:id="search_hbox" alignment="BASELINE_CENTER" layoutX="265.0" layoutY="18.0" spacing="4.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="18.0">
          <children>
-            <ComboBox fx:id="filtroBox" onAction="#actionFiltroBox" prefHeight="25.0" prefWidth="86.0" promptText="Filtra" styleClass="secondaryButton" />
-            <TextField fx:id="cercaField" prefHeight="25.0" promptText="cerca" styleClass="searchField" />
-            <Button fx:id="searchButton" defaultButton="true" maxHeight="25.0" minHeight="25.0" mnemonicParsing="false" onAction="#actionSearchButton" prefHeight="25.0" styleClass="secondaryButton" text="Cerca" />
+            <ComboBox fx:id="filtroBox" onAction="#actionFiltroBox" promptText="Filtra" styleClass="secondaryButton" />
+            <TextField fx:id="cercaField" promptText="cerca" styleClass="searchField" />
+            <Button fx:id="searchButton" defaultButton="true" maxHeight="-Infinity" minHeight="-Infinity" mnemonicParsing="false" onAction="#actionSearchButton" styleClass="secondaryButton" text="Cerca" />
          </children>
-         <padding>
-            <Insets left="3.0" right="3.0" />
-         </padding>
       </HBox>
    </children>
 </AnchorPane>
