--- a/src/main/resources/com/calendly/calendly/fxml/HomeView.fxml
+++ b/src/main/resources/com/calendly/calendly/fxml/HomeView.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane fx:id="anchorPaneFather" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="700.0" minWidth="950.0" prefHeight="700.0" prefWidth="950.0" scaleShape="false" styleClass="external-pane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.calendly.calendly.Controller.HomeController">
    <children>
-      <VBox alignment="CENTER_LEFT" layoutX="19.0" layoutY="186.0" prefHeight="301.0" prefWidth="372.0" spacing="10.0" AnchorPane.bottomAnchor="213.0" AnchorPane.topAnchor="186.0">
+      <VBox fx:id="vbox" alignment="CENTER_LEFT" layoutX="19.0" layoutY="186.0" prefHeight="301.0" prefWidth="372.0" spacing="10.0" AnchorPane.bottomAnchor="213.0" AnchorPane.topAnchor="186.0">
          <children>
             <Button fx:id="dashboardButton" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#apriDashboard" prefHeight="30.0" prefWidth="140.0" styleClass="sidebar-button" text="Dashboard" />
             <Button fx:id="appuntamentiButton" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#apriAppuntamenti" prefHeight="30.0" prefWidth="140.0" styleClass="sidebar-button" text="Appuntamenti" />
